[gd_scene load_steps=4 format=3 uid="uid://besh0hskqlkv7"]

[ext_resource type="Script" uid="uid://elmvl4i0y343" path="res://Objects/Campaign/military/battle_menu.gd" id="1_32am3"]
[ext_resource type="Theme" uid="uid://dg107ll84c5qe" path="res://Objects/Themes/theme_campaign_ui_1.tres" id="1_fvykk"]
[ext_resource type="PackedScene" uid="uid://kplcxvwco21v" path="res://Objects/UI/button.tscn" id="2_ejs2v"]

[node name="BattleMenu" type="Panel"]
process_mode = 3
z_index = 500
z_as_relative = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -734.0
offset_bottom = -442.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_fvykk")
script = ExtResource("1_32am3")

[node name="Btn_StartBattle" parent="." instance=ExtResource("2_ejs2v")]
layout_mode = 2
offset_left = 166.0
offset_top = 119.0
offset_right = 262.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start Battle"

[node name="PlayerArmy" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 31.0
offset_top = 35.0
offset_right = 80.0
offset_bottom = 61.0
text = "player"

[node name="EnemyArmy" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 334.0
offset_top = 31.0
offset_right = 387.0
offset_bottom = 57.0
text = "enemy"

[node name="BtnClose" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.99
anchor_bottom = 1.0
offset_left = 387.0
offset_top = 2.0
offset_right = 0.179962
offset_bottom = -173.0
focus_mode = 0
text = " X "

[connection signal="pressed" from="BtnClose" to="." method="_on_btn_close_pressed"]
